# GNCZMKN

./: .gitignore  CMakeLists.txt
config/: simulation.json
doc/: architecture.md
example/: CMakeLists.txt  plot_results.py  simple_gravity_turn.cpp
include/gnc/common/: logger.hpp  math_types.hpp  types.hpp
include/gnc/common/math/: calculus.hpp  eigen_types.hpp  euler_sequences.hpp  interp.hpp  linalg.hpp  math.hpp  nonlinear.hpp  optimization.hpp  quaternion.hpp  roots.hpp  rotation.hpp  special_functions.hpp  statistics.hpp  transform.hpp
include/gnc/components/dynamics/: simple_dynamics.hpp
include/gnc/components/environment/: wgs84_earth.hpp
include/gnc/components/navigation/: simple_navigation.hpp
include/gnc/components/sensors/: ideal_imu.hpp
include/gnc/components/state/: truth_state.hpp
include/gnc/core/: component_base.hpp  component_factory.hpp  component_registry.hpp  config_manager.hpp  config_node.hpp  data_formatters.hpp  data_logger.hpp  dependency_validator.hpp  json_parser.hpp  scoped_registry.hpp  service_context.hpp  simulation_builder.hpp  simulator.hpp
include/gnc/interfaces/: data_types.hpp
include/gnc/interfaces/coord/: frame_id.hpp
include/gnc/interfaces/disturbance/: i_disturbance.hpp
include/gnc/interfaces/dynamics/: i_dynamics.hpp
include/gnc/interfaces/environment/: i_atmosphere_model.hpp  i_earth_model.hpp  i_gravity_model.hpp
include/gnc/interfaces/gnc/: i_controller.hpp  i_guidance.hpp  i_navigation.hpp
include/gnc/interfaces/infrastructure/: i_data_logger.hpp
include/gnc/interfaces/propulsion/: i_actuator.hpp  i_engine.hpp
include/gnc/interfaces/sensors/: i_gps_sensor.hpp  i_imu_sensor.hpp
include/gnc/interfaces/state/: i_vehicle_state.hpp
include/gnc/interfaces/vehicle/: i_aerodynamics.hpp  i_mass_property.hpp
include/gnc/libraries/: pid_controller.hpp  state_machine.hpp
include/gnc/libraries/control/: discretization.hpp  state_space.hpp  tf2ss.hpp
include/gnc/libraries/coord/: coord.hpp  rotations.hpp
include/gnc/libraries/filters/: butterworth.hpp  filter_base.hpp  moving_average.hpp  notch.hpp
include/gnc/services/coordinate/: coordinate_service.hpp
src/: main.cpp
tests/: benchmark_optimization.cpp  rk45_benchmark.cpp  test_config_manager.cpp  test_data_logger.cpp  test_math_headers.cpp  test_transform.cpp
